# incubator-milagro-mfa-server

./: .coveragerc  .gitignore  LICENSE  NOTICE  README.md  install.sh  runtests.sh  setup.py  tox.ini
grpcserver/: README.md
grpcserver/src/: CMakeLists.txt  README.md  conan.run  conanfile.txt  test_server.crt  test_server.key
grpcserver/src/cmake/: FindCppREST.cmake  FindProtobuf.cmake
grpcserver/src/dta/: dtaserver.cpp  main.cpp  secret_proxy.cpp  utils.cpp
grpcserver/src/include/: dtaclient.h  dtaserver.h  secret_proxy.h  utils.h
grpcserver/src/protos/: dta.proto  mpin.proto  rpa.proto  rps.proto
lib/: crypto.py  dynamic_options.py  mpDaemon.py  mpWinService.py
lib/entropy/: base.py  certivox.py  dev_random.py  dev_urandom.py  http.py
lib/mpin_utils/: common.py  secrets.py
lib/storage/: __init__.py  item.py
lib/storage/backends/: base.py  file.py  memory.py  redis.py
lib/storage/tests/: cases.py  test_file_storage.py  test_get_storage.py  test_memory_storage.py  test_redis_storage.py
requirements/: common.txt  dev.txt
scripts/: change_ms_backup_passphrase.py  getCommunityCredentials.py  getServerSecretShare.py
servers/demo/: __init__.py  config_default.py  demoservice.py  mailer.py  mpinDemo.py
servers/demo/public/css/: reset.css  styles.css
servers/demo/templates/: activate.html  activation_email.html  activation_email.txt  base.html  empin_activation_email.html  empin_activation_email.txt  index.html  protected.html
servers/dta/: config_default.py  dta.py  dtaservice.py
servers/rps/: config_default.py  mobile_flow.py  rps.py  rpsservice.py  test_dynamic_options.py
tests/: test_crypto.py  test_signing.py
